
ChangeLog
 [ + added, - removed, * changed ]
 * 11Apr2017 Changed PEBS initialization to activate in all the threads
 * 04Apr2017 Unifies GNU OpenMP APIs in a single library
 * 23Mar2017 Added missing initialization of control variables to keep track when we're in instrumentation or sampling that prevented PEBS sampling to trigger
 * 22Mar2017 Fixed configure checks for Java instrumentation support
 * 15Mar2017 pyextrae no longer requires a list of functions to instrument to activate the tracing
 * 03Mar2017 Fixed missing python scripts after make install
 * 14Feb2017 Fixed conflict between sampling and I/O tracing where we would capture I/O calls inside the sampling handler
 * 13Feb2017 Fixed critical bug in __kmpc_fork_call due to the use of the non-reentrant par_func variable to store the user task pointer 
 * 13Feb2017 Upgraded Dyninst compabitility to series 9.x 
 * 31Jan2017 Fixes bug in libdwarf detection macro
 * 12Jan2017 Fixes shared-libraries tests being compiled during 'make' instead
 of during 'make check'
 + 28Dec2016 Add instrumentation support for sched_yield syscall and others
 + 27Dec2016 Added support for Python MPI and multiprocessing tracing
 * 13Dec2016 Adds new build information into configured.sh script
 * 13Dec2016 Adds tracing of MPI IO size in Fortran
 * 01Dec2016 Increases default buffer size in the examples by x10
 * 17Nov2016 Patched IO calls again to save/restore the value of errno twice, before and after calling the real I/O symbol
 * 14Nov2016 Builds additional C/Fortran tracing library by default
 * 14Nov2016 Fixes MPI_Ialltoallv label
 - 08Nov2016 Removed flag -Wall from tests/overhead
 * 08Nov2016 Patched IO calls to save/restore the value of errno at entry/exit of the wrappers
 * 07Nov2016 Fixes PEBS memory translations
 * 27Oct2016 Fixes Fortran interfaces for MPI3 non-blocking collective calls
 * 21Oct2016 Changed checks in IO wrappers to ensure the compiler doesn't optimize the conditions and tests for an invalid THREADID