@@ -7,11 +7,12 @@ WRAPPERS_CUDA = \
 
 if WANT_CUDA
 WRAPPERS_CUDA += cuda_wrapper.c cuda_wrapper.h
-WRAPPERS_CUDA_CFLAGS = -I$(CUDA_HOME)/include
+WRAPPERS_CUDA_CFLAGS = @CUDA_CFLAGS@
 endif
 if WANT_CUPTI
 WRAPPERS_CUDA += cuda_wrapper_cupti.c cuda_wrapper_cupti.h
-WRAPPERS_CUDA_CFLAGS = -I$(CUPTI_HOME)/include -I$(CUDA_HOME)/include
+WRAPPERS_CUDA_CFLAGS = @CUPTI_CFLAGS@ @CUDA_CFLAGS@
+WRAPPERS_CUDA_LDFLAGS = @CUPTI_LDFLAGS@ -lcupti
 endif
 
 noinst_LTLIBRARIES  = libwrap_cuda.la
@@ -28,6 +29,8 @@ libwrap_cuda_la_CFLAGS = \
  -I$(COMMON_INC) \
  $(UNWIND_CFLAGS) \
  $(WRAPPERS_CUDA_CFLAGS)
+
+libwrap_cuda_la_LDFLAGS = $(WRAPPERS_CUDA_LDFLAGS)
 
 libwrap_cuda_la_SOURCES = $(WRAPPERS_CUDA)
 
